Fix eww SCSS compilation and tune left icon spacing

--- a/.config/eww/styles/bar.scss
+++ b/.config/eww/styles/bar.scss
@@ -21,7 +21,7 @@
 }
 
 .bar-workspaces {
-  margin-left: 24px;
+  margin-left: 20px;
 }
 
 .bar-ws {
